# nucleus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SUMMARY.md  book.toml  build_and_run.sh  config.yaml  hello.txt  llm-workspace  main.go
ai/: Makefile  README.md  config.yaml  go.mod  go.sum  main.go  server.go
ai/chat/: manager.go
ai/fileops/: fileops.go
ai/interactive/: interactive.go
ai/rag/: rag.go
ai/server/: server.go
ai/tools/: README.md  file_tools.go  tools.go
config/: config.go
core/: Cargo.toml  config.yaml
core/src/: config.rs  main.rs  ollama.rs
core/src/rag/: indexer.rs  mod.rs  types.rs
core/src/server/: handler.rs  mod.rs  transport.rs  types.rs
docs/: ARCHITECTURE.md  RAG_GUIDE.md  README.md  SUMMARY.md  introduction.md  performance-and-language-choice.md  pty-manipulation-approach.md  pty-setup-walkthrough.md  rust-vs-zig-pty.md  warp-architecture.md
docs/api/: overview.md
docs/guides/: configuration.md  model-registry.md
examples/: basic_chat.rs  config.yaml  detection.rs  rag_indexing.rs  read_file_line.rs  refactor_assistant.rs  terminal_rag_chat.rs  write_file.rs
nucleus/: Cargo.toml
nucleus-cli/: Cargo.toml
nucleus-cli/src/: main.rs
nucleus-core/: Cargo.toml  RAG_SCALING.md  config.yaml
nucleus-core/examples/: model_registry.rs  ollama.rs
nucleus-core/src/: config.rs  detection.rs  lib.rs  ollama.rs  patterns.rs  qdrant_helper.rs
nucleus-core/src/chat/: manager.rs
nucleus-core/src/mcp/: client.rs  mod.rs  types.rs
nucleus-core/src/mcp/transport/: mod.rs  stdio.rs
nucleus-core/src/models/: mod.rs  registry.rs
nucleus-core/src/provider/: mistralrs.rs  mod.rs  ollama.rs  types.rs  utils.rs
nucleus-core/src/rag/: embedder.rs  indexer.rs  lancedb_store.rs  mod.rs  qdrant_store.rs  store.rs  types.rs
nucleus-core/src/server/: handler.rs  mod.rs  transport.rs
nucleus-dev/: Cargo.toml
nucleus-dev/src/: lib.rs
nucleus-plugin/: Cargo.toml
nucleus-plugin/src/: lib.rs  plugin.rs  registry.rs
nucleus-std/: Cargo.toml
nucleus-std/examples/: read_file.rs  search_text.rs
nucleus-std/src/: commands.rs  files.rs  lib.rs  search.rs
nucleus/src/: lib.rs
pty/: Cargo.toml
pty/src/: main.rs
pty/src/core/: ai_client.rs  command.rs  input_handler.rs  io_loop.rs  mod.rs  output_handler.rs  server_manager.rs
pty/src/utils/: mod.rs  terminal.rs  theme.rs
