[workspace]
resolver = "2"
members = [
    "nucleus-core",
    "nucleus-plugin",
    "nucleus-std",
    "nucleus",
    "nucleus-dev",
    "nucleus-cli",
    "pty",  # Temporary, will be removed later
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Andrew Cooksey"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
anyhow = "1.0"

# Workspace crates
nucleus-core = { path = "nucleus-core", version = "0.1.0" }
nucleus-plugin = { path = "nucleus-plugin", version = "0.1.0" }
nucleus-std = { path = "nucleus-std", version = "0.1.0" }
nucleus-dev = { path = "nucleus-dev", version = "0.1.0" }

