[package]
name = "nucleus-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nucleus"
path = "src/main.rs"

[dependencies]
nucleus-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
