[package]
name = "nucleus-core"
version.workspace = true
edition.workspace = true

[features]
default = []
# GPU acceleration for Apple Silicon (requires Metal toolchain)
metal = ["mistralrs/metal"]
# GPU acceleration for NVIDIA (requires CUDA)
cuda = ["mistralrs/cuda"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
futures.workspace = true
anyhow.workspace = true
nucleus-plugin = { path = "../nucleus-plugin" }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", default-features = false }
async-trait.workspace = true
tracing = "0.1.43"
qdrant-client = { version = "1.11", default-features = false, features = ["serde"] }
lancedb = "0.22"
arrow-array = "56.2"

[dev-dependencies]
tempfile = "3.13"
