[package]
name = "pty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
console = "0.15"
crossterm = "0.27"
libc = "0.2"
nix = { version = "0.30.1", features = ["term", "signal", "ioctl", "fs"] }
portable-pty = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
